# web

./: Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: python-app.yml
src/web/: app.py
tests/: test_app.py
