[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name =  "web"
version = "0.0.0"
authors = [
    {name = "Ope Og", email = "ogunks900@gmail.com"},
]
description = "Web Project"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.12.0"
dependencies = [
    "fastapi[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pylint",
    "pytest",
]

[project.scripts]
app = "web.app:main"

[tool.pylint.messages_control]
disable = ["missing-function-docstring", "missing-module-docstring"]
